feat(node): through2-map

--- a/node/1-first/package.json
+++ b/node/1-first/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bl": "^1.2.1",
-    "strftime": "^0.10.0"
+    "strftime": "^0.10.0",
+    "through2-map": "^3.0.0"
   }
 }
