--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/lokialone/protojs#readme",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "http-proxy": "^1.16.2"
   },
   "devDependencies": {
     "webpack": "^3.3.0",
