--- a/node/cli/package.json
+++ b/node/cli/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "macaw": "./bin/loki.js"
+    "loki-cli": "./bin/loki.js"
   },
   "keywords": [
     "node",
@@ -16,6 +16,7 @@
   "author": "lokialone",
   "license": "ISC",
   "devDependencies": {
-    "commander": "^2.15.1"
+    "commander": "^2.15.1",
+    "glob": "^7.1.2"
   }
 }
