--- a/node/cli/package.json
+++ b/node/cli/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "commander": "^2.15.1",
+    "download-git-repo": "^1.0.2",
     "glob": "^7.1.2"
   }
 }
