--- a/node/cli/package.json
+++ b/node/cli/package.json
@@ -18,6 +18,16 @@
   "devDependencies": {
     "commander": "^2.15.1",
     "download-git-repo": "^1.0.2",
-    "glob": "^7.1.2"
+    "glob": "^7.1.2",
+    "handlebars": "^4.0.11",
+    "inquirer": "^6.0.0",
+    "latest-version": "^4.0.0",
+    "metalsmith": "^2.3.0"
+  },
+  "dependencies": {
+    "download": "^7.0.0",
+    "inquirer-checkbox-plus-prompt": "^1.0.1",
+    "ncp": "^2.0.0",
+    "ora": "^2.1.0"
   }
 }
