--- a/node/email/package.json
+++ b/node/email/package.json
@@ -1,14 +1,18 @@
-
 {
   "name": "so-email",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tag": "node lib/tag.js"
   },
   "bin": {
-     "deploy-email": "./index.js"
+    "deploy-email": "./index.js"
+  },
+  "engines": {
+    "node": ">= 8.0.0",
+    "npm": ">= 5.0.0"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +25,9 @@
     "inquirer": "^6.0.0",
     "lodash": "^4.17.10",
     "minimist": "^1.2.0",
+    "moment": "^2.22.2",
+    "semver": "^5.5.0",
+    "shelljs": "^0.8.2",
     "touch": "^3.1.0"
   }
 }
