--- a/node/email/deploy-email-config.json
+++ b/node/email/deploy-email-config.json
@@ -1,1 +1,11 @@
-{"title":"ffaf","desc":"fdafdaf","time":"2018-07-03 09:58:05","tester":"dfsf","developer":"fafa","product":"fa","design":"af","operate":"affa","teamId":12,"projectId":52}
+{
+  "title": "hello a ",
+  "tester": "-",
+  "developmenter": "00",
+  "product": "-",
+  "design": "-",
+  "operate": "-",
+  "teamId": 14,
+  "projectId": 69,
+  "gitPath": "git@git.souche-inc.com:new-retail-wireless/souche-saber-tmall-order.git"
+}
