--- a/node/email/package.json
+++ b/node/email/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "send-deploy-email",
-  "version": "1.0.3",
+  "name": "@souche/send-deploy-email",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "lodash": "^4.17.10",
     "minimist": "^1.2.0",
     "moment": "^2.22.2",
+    "qs": "^6.5.2",
     "semver": "^5.5.0",
     "shelljs": "^0.8.2",
     "touch": "^3.1.0"
