--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "lodash": "^4.17.5",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
   }
