--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,24 @@
     "version": "0.2.0",
     "configurations": [
 
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/node/cli/bin/loki-init.js"
-        },
+        // {
+        //     "type": "node",
+        //     "request": "launch",
+        //     "name": "Launch Program",
+        //     "program": "${workspaceFolder}/node/cli/bin/loki-init.js"
+        // },
 
+        // {
+        //     "type": "node",
+        //     "request": "launch",
+        //     "name": "Launch Program",
+        //     "program": "${workspaceFolder}/algorithm/book-算法竞赛入门经典/chapter1/1.1.2.js"
+        // },
         {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/algorithm/book-算法竞赛入门经典/chapter1/1.1.2.js"
+            "program": "${workspaceFolder}/node/odin/index.js"
         }
     ]
 }
