--- a/node/odin/package.json
+++ b/node/odin/package.json
@@ -7,7 +7,7 @@
     "test": "jest test",
     "test:watch": "npm run test -- --watch",
     "test:cover": "npm run test -- --coverage",
-    "dev": "nodemon --watch index.js --watch /lib"
+    "dev": "nodemon --watch index.js --watch lib/validate.js"
   },
   "keywords": [
     "业务监控"
