--- a/node/odin/package.json
+++ b/node/odin/package.json
@@ -12,6 +12,9 @@
   "keywords": [
     "业务监控"
   ],
+  "bin": {
+    "odin": "./bin/odin.js"
+  },
   "author": "lokialone",
   "license": "ISC",
   "dependencies": {
@@ -20,7 +23,10 @@
     "commander": "^2.17.1",
     "idx": "^2.4.0",
     "inquirer": "^6.2.0",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "raven": "^2.6.3",
+    "raven-js": "^3.26.4",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "jest": "^23.5.0",
