--- a/node/email/package.json
+++ b/node/email/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@souche/send-deploy-email",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "clear": "^0.1.0",
     "clui": "^0.3.6",
     "configstore": "^3.1.2",
+    "escape-string-regexp": "^1.0.5",
     "figlet": "^1.2.0",
     "inquirer": "^6.0.0",
     "lodash": "^4.17.10",
