--- a/node/odin/.babelrc
+++ b/node/odin/.babelrc
@@ -2,6 +2,9 @@
 	"presets": [
 		["env", { "modules": false}]
 	],
+	"plugins": [
+		"transform-runtime"
+	],
 	"env": {
 		"test": {
 		  "presets": [["env"]]
