--- a/node/odin/package.json
+++ b/node/odin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@souche/odin",
-  "version": "1.0.0-beta-7",
+  "version": "1.0.0-beta-11",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "jest": "^23.5.0",
     "nodemon": "^1.18.3",
