--- a/node/odin/package.json
+++ b/node/odin/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "idx": "^2.4.0",
-    "lodash": "^4.17.10"
+    "js2flowchart": "^1.1.7",
+    "lodash": "^4.17.10",
+    "store": "^2.0.12"
   },
   "engines": {
     "node": ">=8.9"
