--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/lokialone/protojs#readme",
   "dependencies": {
+    "accounting": "^0.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "configstore": "^4.0.0",
     "http-proxy": "^1.16.2",
-    "inquire": "^0.4.8"
+    "inquire": "^0.4.8",
+    "jquery": "^3.3.1",
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
