--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "configstore": "^4.0.0",
+    "data.task": "^3.1.2",
     "http-proxy": "^1.16.2",
     "inquire": "^0.4.8",
     "jquery": "^3.3.1",
