--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/lokialone/protojs#readme",
   "dependencies": {
+    "@persper/js-callgraph": "^1.3.2",
     "accounting": "^0.4.1",
     "configstore": "^4.0.0",
     "data.task": "^3.1.2",
