--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   "dependencies": {
     "@persper/js-callgraph": "^1.3.2",
     "accounting": "^0.4.1",
+    "blessed": "^0.1.81",
+    "blessed-contrib": "^4.8.16",
     "configstore": "^4.0.0",
     "data.task": "^3.1.2",
     "http-proxy": "^1.16.2",
     "inquire": "^0.4.8",
     "jquery": "^3.3.1",
+    "js-yaml": "^3.13.1",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
