--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "inquire": "^0.4.8",
     "jquery": "^3.3.1",
     "js-yaml": "^3.13.1",
+    "node-fetch": "^2.6.0",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
